--- a/Jyb/src/main/res/values/styles.xml
+++ b/Jyb/src/main/res/values/styles.xml
@@ -7,14 +7,14 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
-    <style name="Transparent" parent="android:Theme.NoTitleBar.Fullscreen">
+    <style name="Transparent" parent="android:Theme.Holo.NoActionBar.TranslucentDecor">
         <item name="android:windowBackground">@color/transparent_background</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <!-- <item name="android:windowAnimationStyle">@+android:style/Animation.Translucent</item> -->
     </style>
     
-    <style name="Transparent2" parent="android:Theme.NoTitleBar.Fullscreen">
+    <style name="Transparent2" parent="android:Theme.Holo.NoActionBar.TranslucentDecor">
         <item name="android:windowBackground">@color/transparent2_background</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
