--- a/Jyb/src/main/res/layout/activity_welcome.xml
+++ b/Jyb/src/main/res/layout/activity_welcome.xml
@@ -38,6 +38,6 @@
         android:layout_height="50dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/restart" />
+        android:background="@drawable/switchstr" />
 
 </FrameLayout>
