--- a/Jyb/src/main/res/layout/activity_jigsawpuzzle.xml
+++ b/Jyb/src/main/res/layout/activity_jigsawpuzzle.xml
@@ -20,7 +20,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp" >
+        android:layout_marginTop="160dp" >
 
         <ImageView
             android:id="@+id/thumbnail"
@@ -88,7 +88,7 @@
         android:layout_centerInParent="true"
         android:layout_gravity="bottom"
         android:layout_marginBottom="75dp"
-        android:background="@drawable/bg_gameview"
+        android:background="@drawable/bg_jigsaw"
         android:padding="5dp" >
     </com.example.jigsawpuzzle.JigsawView>
 
@@ -97,7 +97,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:background="@drawable/btnbg_pick" />
 
@@ -106,7 +106,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/btnbg_picturepick" />
 
     <Button
@@ -114,7 +114,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/btnbg_restart" />
 
