feat(Jyb): 添加年龄显示功能

--- a/Jyb/src/main/res/layout/activity_welcome.xml
+++ b/Jyb/src/main/res/layout/activity_welcome.xml
@@ -33,6 +33,19 @@
         android:textSize="30dp" />
 
 	<TextView
+		android:id="@+id/baby01Age"
+		android:layout_width="wrap_content"
+		android:layout_height="80dp"
+		android:gravity="center"
+		android:layout_gravity="bottom|center_horizontal"
+		android:layout_marginBottom="120dp"
+		android:text="00岁001天"
+		android:textStyle="bold"
+		android:textColor="#13227a"
+		android:textSize="30dp" />
+
+	<TextView
+		android:visibility="invisible"
 		android:id="@+id/gestationWeek"
 		android:layout_width="wrap_content"
 		android:layout_height="80dp"
