--- a/Jyb/src/main/res/layout/activity_about.xml
+++ b/Jyb/src/main/res/layout/activity_about.xml
@@ -13,6 +13,18 @@
         android:background="@drawable/btnbg_close" />
 
     <TextView
+        android:id="@+id/baby01Age"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="120dp"
+        android:text="00岁001天"
+        android:textColor="#389bff"
+        android:textSize="30dp" />
+
+    <TextView
+        android:visibility="invisible"
         android:id="@+id/gestationWeek"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
